# atlys-assignment

./: README.md  Readme.md
web-scraping-tool/: .dockerignore  Dockerfile  README.md  pyproject.toml
web-scraping-tool/web_scraping_tool/: main.py
web-scrapping-tool/: README.md  docker-compose.yml  pyproject.toml
web-scrapping-tool/local-setup/: generate_env.sh
web-scrapping-tool/web_scrapping_tool/: config.py  dependencies.py  main.py
web-scrapping-tool/web_scrapping_tool/notification/: abstract.py  console.py
web-scrapping-tool/web_scrapping_tool/persistance/: abstract.py
web-scrapping-tool/web_scrapping_tool/persistance/database/: mongo.py
web-scrapping-tool/web_scrapping_tool/persistance/database/implementations/: requests.py  scraps.py  settings.py
web-scrapping-tool/web_scrapping_tool/persistance/file/: requests.py  scraps.py  settings.py
web-scrapping-tool/web_scrapping_tool/persistance/model/: scrap.py
web-scrapping-tool/web_scrapping_tool/router/: requests.py  setting.py  user.py
web-scrapping-tool/web_scrapping_tool/router/model/: request.py  scrap.py  setting.py
web-scrapping-tool/web_scrapping_tool/services/: requests.py  scraps.py  service_provider.py  settings.py  user.py
web-scrapping-tool/web_scrapping_tool/tasks/: request_handler.py
web-scrapping-tool/web_scrapping_tool/utils/: authentication.py
web_scraping_tool/: pyproject.toml
web_scrapping_tool/: Dockerfile  docker-compose.yml
web_scrapping_tool/web_scrapping_tool/: main.py
web_scrapping_tool/web_scrapping_tool/router/: user.py
(+3 files in other folders)
